@@ -1,3 +1,8 @@
+2010-11-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* help/C/gphotoframe.xml: Updated help documentation.
+	  Thanks Cristian Marchi!
+
 2010-11-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* fspot/__init__.py: Fixed an URI encoding (issue #76).
